<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.elvis.carleaseapp.PostFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/TitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Location"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <fragment
                android:id="@+id/editTitle"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <!--<EditText-->
            <!--android:id="@+id/editTitle"-->
            <!--android:layout_width="250dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="0.25"-->
            <!--android:ems="10"-->
            <!--android:hint="Please enter your car name"-->
            <!--android:inputType="textPersonName"-->
            <!--android:maxLength="25" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/YearView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="Year"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editYear"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="Year of manufacture "
                android:maxLength="4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/BrandView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="Brand"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editBrand"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/ColourView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="Colour"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editColour"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/MileageView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="Mileage"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editMileage"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/PriceView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="Price"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPrice"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/rentTimeView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:text="Rent Time"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/EmailView"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.12"
                android:text="Email"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/TelephoneView"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="Telephone"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTelephone"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/loadimage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:onClick="selectFromGallery"
                android:text="Upload Image" />

            <ImageView
                android:id="@+id/car_image"
                android:layout_width="fill_parent"
                android:layout_height="200dp" />
        </LinearLayout>


        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|right"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:text="Post" />


    </LinearLayout>

</ScrollView>
