...
        <TextView
            android:id="@+id/car_year"
            style="@style/PostItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/car_telephone_txt"
            android:text="1997" />

        <TextView
            android:id="@+id/car_mileage"
            style="@style/PostItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:id="@+id/car_email"
            style="@style/PostItemTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/car_telephone"
            android:layout_alignStart="@+id/car_year"
            android:text="abc@gmail.com" />

    </RelativeLayout>


</android.support.v7.widget.CardView>
