...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/car_rentTime"
                android:layout_toEndOf="@+id/for_txt"
                android:textSize="20sp"
                android:layout_alignBottom="@+id/car_price"
                android:text="10 days"/>


        </RelativeLayout>
    </RelativeLayout>


...
